<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="aau.losamigos.wizard.CreateGameActivity">

    <EditText
        android:id="@+id/gameName"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/game_title"
        android:inputType="textPersonName"
        android:text="New Wizard Game"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/create_new_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText_maxPlayer"
        android:layout_width="106dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/max_player"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/gameName"
        app:layout_constraintTop_toBottomOf="@+id/gameName" />

    <EditText
        android:id="@+id/editText_minPlayer"
        android:layout_width="106dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/min_player"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/gameName"
        app:layout_constraintTop_toBottomOf="@+id/gameName" />

    <Switch
        android:id="@+id/sw_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:switchPadding="10dp"
        android:text="@string/pin_enabled"
        android:textOff="Off"
        android:textOn="On"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412" />

    <Switch
        android:id="@+id/sw_cheating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:switchPadding="10dp"
        android:text="@string/cheat_enabled"
        android:textOff="Off"
        android:textOn="On"
        app:layout_constraintEnd_toEndOf="@+id/sw_password"
        app:layout_constraintTop_toBottomOf="@+id/sw_password" />

</android.support.constraint.ConstraintLayout>
