<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorGreen"
    android:clickable="false"
    android:visibility="visible"
    tools:context="aau.losamigos.wizard.TableActivity">

    <!--Temporäre OnClickFunktion für neue Karten-->
    <ImageView
        android:id="@+id/Trump"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:onClick="resetGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backside" />

    <ImageView
        android:id="@+id/playerC2"
        android:layout_width="40dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="playCard2"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backside" />

    <ImageView
        android:id="@+id/playerC6"
        android:layout_width="40dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:onClick="playCard6"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backside" />

    <ImageView
        android:id="@+id/playerC5"
        android:layout_width="40dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:onClick="playCard5"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playerC4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backside" />

    <ImageView
        android:id="@+id/playerC3"
        android:layout_width="40dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:onClick="playCard3"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/playerC4"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backside" />

    <ImageView
        android:id="@+id/playerC4"
        android:layout_width="40dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="playCard4"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backside" />

    <TextView
        android:id="@+id/Player2"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/Player2"
        android:textSize="8sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerC2" />

    <TextView
        android:id="@+id/Player3"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/Player3"
        android:textSize="8sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/Player4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerC3" />

    <TextView
        android:id="@+id/Player4"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Player4"
        android:textSize="8sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerC4" />

    <TextView
        android:id="@+id/Player5"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/Player5"
        android:textSize="8sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Player4"
        app:layout_constraintTop_toBottomOf="@+id/playerC5" />

    <TextView
        android:id="@+id/Player6"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/Player6"
        android:textSize="8sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerC6" />

    <TextView
        android:id="@+id/trump"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="2dp"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/Trumpf"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Trump" />

    <Button
        android:id="@+id/btn_predictTrick"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Vorhersage"
        app:layout_constraintBottom_toTopOf="@+id/playerHand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <HorizontalScrollView
        android:id="@+id/playerHand"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onClick"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/cardHand"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"

            />
    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:scrollbars="none"
        android:foregroundGravity="center"

        app:layout_constraintBottom_toTopOf="@+id/btn_predictTrick"
        app:layout_constraintEnd_toStartOf="@+id/playerC6"
        app:layout_constraintStart_toEndOf="@+id/playerC2"
        app:layout_constraintTop_toBottomOf="@+id/Player4">

        <LinearLayout
            android:id="@+id/playedCards"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    </HorizontalScrollView>

</android.support.constraint.ConstraintLayout>
